--- a/Weatherly.css
+++ b/Weatherly.css
@@ -41,10 +41,12 @@
 
  .images img{ 
            position:absolute;
+           left:0px;
            width: 280px;
            border-radius: 10px;
-           margin-left: 2px;
-           margin-top: 2px;
+           /*margin-left: 2px;
+           margin-top: 2px;*/
+           z-index:-1;
 }
 
 
@@ -79,5 +81,17 @@
     text-align: center;
     border-radius: 10px;
     border: 5px solid beige;
-    height: 420px;
+    height: 425px;
+    position: relative;
+}
+
+.closeBtn {
+  position: absolute;
+  right:0px;
+  top: 0px;
+  font-weight:bold;
+  color:#F00;
+  cursor:pointer;
+  text-shadow: 1px 1px 2px dimgrey;
+  padding: 5px;
 }
