updating my portfolio

--- a/css/creative.css
+++ b/css/creative.css
@@ -419,3 +419,12 @@ body {
   text-align: center;
   color: purple;
 }
+
+.carousel .item img {
+   left: -9999px;  /*important */
+   right: -9999px;  /*important */
+   margin: 0 auto;  /*important */
+   max-width: none;  /*important */
+   min-width: 100%;
+   position: absolute;
+}
