--- a/css/creative.css
+++ b/css/creative.css
@@ -52,6 +52,10 @@ p {
 .text-faded {
   color: rgba(255, 255, 255, 0.7);
 }
+.text-faded-dark {
+  color: #222222(255, 255, 255, 0.7);
+}
+
 section {
   padding: 100px 0;
 }
